spec/fixtures/test_suites/malformed/invalid_methods_defined/target_ports_only.rb
class TargetPortsOnly < TestCaseTemplate
  @description = 'testcase for test'
  @requires = 'Individual'
  @protocol = 'test'
  @author = 'test'

  def target_ports
    nil
  end
end
